tests/baselines/reference/intrinsics.errors.txt
==== tests/cases/compiler/intrinsics.ts (2 errors) ====
    
    var hasOwnProperty: hasOwnProperty; // Error
                        ~~~~~~~~~~~~~~
!!! intrinsics.ts(2,21): error TS2095: Could not find symbol 'hasOwnProperty'.
    
    module m1 {
        export var __proto__;
        interface __proto__ {}
    
        class C<T extends { __proto__: __proto__ }> { }
    }
    
    __proto__ = 0; // Error, __proto__ not defined
    ~~~~~~~~~
!!! intrinsics.ts(11,1): error TS2095: Could not find symbol '__proto__'.
    m1.__proto__ = 0;
    
    class Foo<__proto__> { }
    var foo: (__proto__: number) => void;